objects/adapps__OptimizerPlus_Rec_Types_X_Object_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Record_Types_Per_Object__c</fullName>
        <label>Record Types Per Object</label>
        <referenceTo>adapps__OptimizerPlus_Rec_Types_X_Object__c</referenceTo>
        <relationshipLabel>Record Types Per Object Item</relationshipLabel>
        <relationshipName>Record_Types_Per_Object_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Record Types Per Object Item</label>
    <nameField>
        <label>Record Types Per Object Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Types Per Object Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>